3rdparty changes:

Update March 11 2024
---------------------------------
* Updated USD to 24.03
* Updated boost to 1.84.0
* Removed pkg-config

Update March 4 2024
---------------------------------
* Added ICC profile support in Qt core graphics

Update February 17 2024
---------------------------------
* Updated nangui
* Updated MaterialX

Update January 8 2024
---------------------------------
* Added OpenCV

Update December 18 2023
---------------------------------
* Fixed clang issue with pyside

Update December 17 2023
---------------------------------
* Fixed CMake 3.28 issue in Qt 6.6.0
* Fixed pyside ninja build

Update December 17 2023
---------------------------------
* build.sh improvements
* Added ninja for Qt build
* Added ld classic for Xcode 15+
* Updated json
* Fixed nasm incorrect lib output

Update December 12 2023
---------------------------------
* build.sh improvements
* Moved freetype to build_base
* Updated OpenColorIO
* Updated MaterialX python path
* Updated OpenImageIO python path
* Fixed USD

Update December 10 2023
---------------------------------
* Changed build_install_script build_install_check
* Updated Pyside2 to Pyside6
* Removed Pytools2
* Updated Python for OIIO, OCIO, USD and MaterialX

Update August 27 2023
---------------------------------
* Updated build configurations

Update July 17 2023
---------------------------------
* Updated build configurations
* Fixed incorrect use of eigen

Update June 6 2023
---------------------------------
* Added aces_container
* Added ceres-solver
* Added eigen
* Added glog
* Added rawtoaces

Update May 26 2023
---------------------------------
* Added lilbraw 0.21.1
* Fixed zlib pkgconfig

Update Jan 16 2023
---------------------------------
* Updated lcms2 to 2.14

Update Jan 5 2023
---------------------------------
* Python3 improvements

Update Jan 3 2023
---------------------------------
* Updated oiio with PR3735, arm64 fix
* Updated .gitignore
* Added additional notes to packages.txt
